more modifications, change 1_project to Accucopy

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,3 +1,7 @@
+"huang":
+  - firstname: ["Yu", "Yu S."]
+    url: https://www.yfish.org/
+
 "adams":
   - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
     url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
