--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,7 +18,7 @@
       institution: Shanghai Institute of Materia Medica), Chinese Academy of Sciences 中科院
       year: 2015 - (on leave)
       description:
-        - Description 1.
+        - title: Description 1.
           contents:
             - Sub-description 1.
     - title: Bioinformatics Scientist
